--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ composer.lock
 conf/config.php
 templates/cache/
 assets/css/
+assets/coolgreen2.png
+assets/voxelmanip_forums.png
+progress
+userpic
