--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: gyarb-dist
+          name: cirrus-dist
           path: .
