--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ assets/voxelmanip_forums.png
 progress
 userpic
 themes/voxelmanip_retro/style.css
+assets/smilies
+conf/faq.sample.php
+acmlmboard.code-workspace
